# Gihub-Repository-Implementation-Analyser

./: .gitignore  README.md  adalflow  api.py  app.py  app_repo.py  architecture.md  config.py  data_pipeline.py  pyproject.toml  rag.py  test_rag.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/: GitHubChat.tsx
src/: data_pipeline.py  rag.py
tests/: test_rag.py
