[tool.poetry]
name = "github-chat"
version = "0.1.0"
description = ""
authors = ["Li Yin <li.yin.gravity@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
adalflow = { version = "1.0.1b1", allow-prereleases = true, extras = [
    "openai",
] }

faiss-cpu = "^1.9.0.post1"
streamlit = "^1.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
